# tflite-react-native

./: .gitignore  index.js
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pca.c  postprocess.c  postprocess.h  preprocess.c  preprocess.h  vggsup.cpp
android/src/main/java/com/reactlibrary/: FFT.java  MFCC.java  Recognition.java  TfliteReactNativeModule.java  TfliteReactNativePackage.java  WavFile.java  WavFileException.java  WavToPCM.java
